# pitch-wow

./: .dockerignore  .env.example  .gitignore  01_interpretation_n8n_to_langgraph.md  02_technical_specification.md  03_langgraph_architecture.md  04_system_prompt_babur.md  05_helper_prompts_and_guardrails.md  06_database_schema.md  07_admin_panel_spec.md  08_devops_docker_github_actions.md  09_implementation_plan_acceptance.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  graph.md  pyproject.toml  seed.py
.github/workflows/: ci.yml  deploy.yml
app/: config.py
app/api/: main.py
app/api/admin/: auth.py  routes.py
app/api/admin/templates/: base.html  dashboard.html  incidents_list.html  login.html  login_message.html  prompt_detail.html  prompts_list.html  sessions_list.html  settings_list.html
app/bot/: handlers.py  main.py
app/db/: init_db.py  models.py  models_registry.py  repositories.py  session.py
app/db/migrations/: env.py  script.py.mako
app/graph/: builder.py  state.py
app/graph/nodes/: calibration.py
app/graph/prompts/: registry.py
app/services/: anthropic_client.py  audio.py  langsmith.py  locks.py  stt_muxlisa.py  stt_openai.py  tts_yandex.py
app/worker/: jobs.py  main.py
docker/: Caddyfile
openspec/: config.yaml
tests/unit/: test_graph.py  test_state.py
