[project]
name = "pitchwow-bot"
version = "0.1.0"
description = "Pitch Wow — AI-powered Telegram coaching bot for startup founders"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "httpx>=0.28",
    "structlog>=24.0",
    "redis[hiredis]>=5.0",
    "anthropic>=0.40",
    "openai>=1.60",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "argon2-cffi>=23.0",
    "itsdangerous>=2.2",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "SIM", "UP"]

[tool.ruff.lint.extend-per-file-ignores]
"app/db/init_db.py" = ["E501"]
"app/api/admin/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
